Fixing column spacing on tables

--- a/server/public/display_teams.css
+++ b/server/public/display_teams.css
@@ -1,4 +1,4 @@
-table th {
+table tr {
     width: auto !important;
     height: 1000px;
 }
